--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "app.js",
 	"scripts": {
-		"test": "NODE_ENV=test mocha -r ts-node/register -r tsconfig-paths/register test/**/*.spec.ts",
+		"test": "NODE_ENV=test nyc --reporter=lcov --reporter=text mocha -r ts-node/register -r tsconfig-paths/register test/**/*.spec.ts",
 		"start": "NODE_ENV=dev ts-node-dev -r tsconfig-paths/register src/app.ts"
 	},
 	"author": "",
@@ -14,9 +14,12 @@
 		"@types/chai-as-promised": "^7.1.4",
 		"@types/dotenv": "^8.2.0",
 		"@types/mocha": "^9.0.0",
+		"@types/supertest": "^2.0.11",
 		"chai": "^4.3.4",
 		"mocha": "^9.0.3",
 		"nodemon": "^2.0.12",
+		"nyc": "^15.1.0",
+		"supertest": "^6.1.5",
 		"ts-node": "^10.2.0",
 		"ts-node-dev": "^1.1.8",
 		"tsconfig-paths": "^3.10.1",
